tests/compile/derive-invalid-skip.stderr
error: expected `,`
 --> tests/compile/derive-invalid-skip.rs:5:18
  |
5 |     #[merge(skip = true)]
  |                  ^
